fix a layout bug of trims intro on small screens

--- a/css/w_trims_style.css
+++ b/css/w_trims_style.css
@@ -46,6 +46,7 @@ h1{
     left: 320px;
     background-color: #FFE851;
     padding: 80px 60px;
+    z-index: 420;
 }
 .trims_img{
     width: 100%;
